# brain-dashboard

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt
brain_dashboard/: app.py  atlas_utils.py  brain_visualization.py  data_loaders.py  run_analysis.py  settings.py
brain_dashboard/scripts/: admin_app.py  freesurfer.py  run_app.py  watch_folder.py
brain_dashboard/templates/: admin_index.html  database_admin.html  run_processor.html
docs/: output.md
docs/source/: conf.py  index.rst  installation.rst  running.rst  screenshots_templates.rst  usage.rst
docs/source/_static/: custom.css
runs/analyses/: test1-score-pearson-20250907_190043.pkl  test1-score-pearson-20250907_190043.txt  test2-gender-t-test-20250907_190102.pkl  test2-gender-t-test-20250907_190102.txt  test3-type-anova-20250909_131501.pkl  test3-type-anova-20250909_131501.txt  test4-education_years-spearman-20250909_131615.pkl  test4-education_years-spearman-20250909_131615.txt
runs/config/: users_features.csv
runs/instance/: brain_data.sqlite3
tests/: create_syntetic_3D_nii.py
